1/5/2012	circuit-construction-kit	et	Karel@tiigrihype.ee	Karel Zova	PhET Website Translation #527 (et) submitted

--- a/simulations-java/simulations/circuit-construction-kit/data/circuit-construction-kit/localization/circuit-construction-kit-strings_et.properties
+++ b/simulations-java/simulations/circuit-construction-kit/data/circuit-construction-kit/localization/circuit-construction-kit-strings_et.properties
@@ -1,214 +1,134 @@
-circuit-construction-kit-dc.name          =Circuit Construction Kit (DC Only)
-circuit-construction-kit-dc.description   =An electronics kit in your computer! \
-  Build circuits with resistors, light bulbs, batteries, and switches. \
-  Take measurements with the realistic ammeter and voltmeter. \
-  View the circuit as a schematic diagram, or switch to a life-like view.
-
-circuit-construction-kit-ac.name        =Circuit Construction Kit (DC and AC)
-circuit-construction-kit-ac.description =This new version of the CCK adds capacitors, inductors and AC voltage sources to your toolbox! \
-  Now you can graph the current and voltage as a function of time.
-
-#
-##
-# Base localization for Circuit Construction Kit V3 simulation strings
-#
-
-# Application
-CCKApplication.title          =Vooluringi konstruktor
-CCKApplication.description    =Loo oma vooluring, mängi elektronidega, pane lamp põlema.
-
-# CCKHelp
-CCKHelp.ToolboxHelp            =Võta juhtmeid\nja komponente\ntööriistakastist.
-CCKHelp.JunctionHelp           =Lohista ühenduskohti või\nparem hiireklõps menüüsse.
-CCKHelp.ComponentHelp          =Liigutamiseks lohista või\nparem hiireklõps et muuta või kustutada.
-
-# InteractiveVoltmeter
-InteractiveVoltmeter.VerticalLeadsCheckBox  =Vertikaalsed klemmid
-
-# CCK3Module
-CCK3Module.GrabAWire           =Võta tööriistakastist juhtmeid
-
-# ViewMenu
-ViewMenu.Title                 =Vaade
-ViewMenu.TitleMnemonic         =v
-
-# OptionsMenu
-OptionsMenu.Title             =Valikud
-OptionsMenu.TitleMnemonic     =o
-OptionsMenu.BackgroundColorMenuItem   =Tausta värvus
-OptionsMenu.ToolboxcolorMenuItem      =Tööriistakasti värvus
-
-OptionsMenu.BackgroundColorDialogTitle =Tausta värvus
-OptionsMenu.ToolboxColorDialogTitle    =Tööriistakasti värvus
-
-# CircuitComponentInteractiveGraphic
-CircuitComponentInteractiveGraphic.ShowValueMenuItem          =Näita väärtust
-CircuitComponentInteractiveGraphic.RemoveMenuItem             =Eemalda
-CircuitComponentInteractiveGraphic.ResistanceMenuItem         =Muuda takistust
-CircuitComponentInteractiveGraphic.FlipMenuItem               =Pööra ümber
-CircuitComponentInteractiveGraphic.LeftConnectMenuItem        =Kuva ühendus vasakul
-CircuitComponentInteractiveGraphic.RightConnectMenuItem       =Kuva ühendus paremal
-CircuitComponentInteractiveGraphic.VoltageMenuItem            =Muuda pinget
-CircuitComponentInteractiveGraphic.InternalResistanceMenuItem =Muuda sisetakistust
-CircuitComponentInteractiveGraphic.ReverseMenuItem            =Pööra ümber
-
-# Component Editor
-ComponentEditor.DoneButton                     =Tehtud
-ComponentEditor.BatteryVoltageTitle            =Vooluallikas
-ComponentEditor.BatteryVoltageName             =Pinge
-ComponentEditor.BatteryVoltageUnits            =Volti
-ComponentEditor.MoreVoltsCheckBox              =Rohkem Volte
-ComponentEditor.ResistorResistanceTitle        =Takisti
-ComponentEditor.ResistorResistanceName         =Takistus
-ComponentEditor.ResistorResistanceUnits        =Oomi
-ComponentEditor.BulbResistanceTitle            =Lamp
-ComponentEditor.BulbResistanceName             =Takistus
-ComponentEditor.BulbResistanceUnits            =Oomi
-ComponentEditor.BatteryResistanceTitle         =Vooluallikas
-ComponentEditor.BatteryResistanceName          =Sisetakistus
-ComponentEditor.BatteryResistanceUnits         =Oomi
-
-# LightBulbGraphic
-LightBulbGraphic.Bulb1Title          =Intensiivsus(0..1) Lamp 1
-LightBulbGraphic.Bulb2Title          =Lamp 2
-
-# SeriesAmmeterGraphic
-SeriesAmmeterGraphic.Ammeter     =Ampermeeter
-SeriesAmmeterGraphic.Amps        =Amprit
-
-# InteractiveBranchGraphic
-InteractiveBranchGraphic.RemoveMenuItem  =Eemalda
-
-# InteractiveLever
-InteractiveLever.CursorName          =rotator2
-
-# InteractiveSchematicLever
-InteractiveSchematicLever.CursorName =rotator2
-
-# JunctionSplitter
-JunctionSplitter.SplitMenuItem    =Ühenda lahti
-
-# ConstantDensityPropagator
-ConstantDensityPropagator.SpeedLimitReached1   =Animatsiooni kiiruse limiit saavutatud! Simulatsiooni kiirust vähendatud
-ConstantDensityPropagator.SpeedLimitReached2   =% !
-
-# ReadoutGraphic
-ReadoutGraphic.Ohms   =Oomi
-ReadoutGraphic.Amps   =Amprit
-ReadoutGraphic.Volts  =Volti
-ReadoutGraphic.Farads  =Faradit
-ReadoutGraphic.Henries=Henrit
-
-# BranchSource
-BranchSource.Wire            =Juhe
-BranchSource.Battery         =Vooluallikas
-BranchSource.LightBulb       =Lamp
-BranchSource.Resistor        =Takisti
-BranchSource.Switch          =Lüliti
-BranchSource.Ammeter         =Ampermeeter
-
-# Toolbox
-Toolbox.AmmeterTitle         =Ampermeeter
-
-# VirtualAmmeter
-VirtualAmmeter.Amps          =Amprit
-VirtualAmmeter.HelpString1   =Liiguta juhtme peale
-VirtualAmmeter.HelpString2   =et näha voolutugevust.
-
-# VoltmeterGraphic
-VoltmeterGraphic.UnknownVolts  =???
-VoltmeterGraphic.VoltAbrev     =V
-
-# GrabBagButton
-GrabBagButton.ButtonTitle  =Vooluahela lisad
-GrabBagButton.DialogTitle  =Vooluahela lisad
-#GrabBagButton.Help         =Klõpsa objekti peal, et lisada.
-GrabBagButton.Help         =Vajuta nuppu objekti kõrval.
-
-# CCK3ControlPanel
-CCK3ControlPanel.PhETToolTip           =<html>Klõpsa et külastada<br>PhET programmi veebilehte.</html>
-CCK3ControlPanel.LocalHelpButton       =Kohalik abi
-CCK3ControlPanel.GIFHelpButton         =GIF abi
-CCK3ControlPanel.ShowXMLButton         =näita XML
-CCK3ControlPanel.ChangeViewButton      =Muuda vaadet 200x
-CCK3ControlPanel.AddBatteriesButton    =lisa 100 vooluallikat
-
-CCK3ControlPanel.SizePanelBorder       =Suurus
-CCK3ControlPanel.SmallRadioButton      =Väike
-CCK3ControlPanel.MediumRadioButton     =Keskmine
-CCK3ControlPanel.LargeRadioButton      =Suur
-
-CCK3ControlPanel.ToolsPanelBorder      =Mõõteriistad
-CCK3ControlPanel.VoltmeterCheckBox     =Voltmeeter
-CCK3ControlPanel.NonContactAmmeterCheckBox     =<html>Kontaktivaba<br>Ampermeeter</html>
-CCK3ControlPanel.AmmeterCheckBox       =Ampermeeter
-
-CCK3ControlPanel.VisualPanelBorder     =Vaade
-CCK3ControlPanel.ShowValuesCheckBox    =Näita Väärtused
-CCK3ControlPanel.HideValuesCheckBox    =Peida Väärtused
-CCK3ControlPanel.LIfelikeRadioButton   =Piltlik
-CCK3ControlPanel.SchematicRadioButton  =Skemaatiline
-
-CCK3ControlPanel.OpenFileDialog        =Milline CCK Fail avada?
-CCK3ControlPanel.DefaultFileName       =circuit.cck
-CCK3ControlPanel.FileExtension         =cck
-CCK3ControlPanel.CCKHelpGifURL         =http://www.colorado.edu/physics/phet/projects/cck/v8/circuit-construction-kit-help.gif
-CCK3ControlPanel.JnlpDownloadService   =javax.jnlp.DownloadService
-CCK3ControlPanel.CCKHelpJarURL         =http://www.colorado.edu/physics/phet/projects/cck/v8/help.jar
-CCK3ControlPanel.ErrorLoadingHelpDialog=Viga abifaili laadimisel
-
-CCK3ControlPanel.CircuitEquationsFrame =Vooluringi võrradid
-CCK3ControlPanel.JunctionEquations     =Harupunktide võrrandid
-CCK3ControlPanel.LoopEquations         =Kontuuride võrrandid
-CCK3ControlPanel.OhmsLawEquations      =Oomi seaduse võrrandid
-
-CCK3ControlPanel.FilePanelBorder       =Fail
-CCK3ControlPanel.SaveButton            =Salvesta
-CCK3ControlPanel.LoadButton            =Laadi
-CCK3ControlPanel.ClearButton           =Puhasta
-CCK3ControlPanel.DeleteConfirm         =Kustuta kogu vooluring ja alusta uuesti?
-
-CCK3ControlPanel.AdvancedPanelBorder   =Lisavalikud
-CCK3ControlPanel.Enable                =Näita >>
-CCK3ControlPanel.Disable               =Peida <<
-CCK3ControlPanel.WireResistivitySlider        =Juhtme takistus
-CCK3ControlPanel.WireResistivitySliderMeasure =Takistus/pikkus
-CCK3ControlPanel.AlmostNoneLabel              =Olematu
-CCK3ControlPanel.LotsLabel                    =Väga suur
-CCK3ControlPanel.InternalResistanceCheckBox   =<html>Vooluallikas<br>Sisetakistus</html>
-CCK3ControlPanel.HideElectronsCheckBox        =Peida Võrrandid
-CCK3ControlPanel.CloseButton                  =Sulge
-CCK3ControlPanel.AdvancedControlsDialog       =Lisavalikud
-CCK3ControlPanel.PhETURL                      =http://phet.colorado.edu
-
-#GrabBag
-GrabBag.Dog = Koer
-GrabBag.DollarBill = Paberraha
-GrabBag.PaperClip = Kirjaklamber
-GrabBag.Penny = Münt
-GrabBag.Eraser = Kustukumm
-GrabBag.PencilLead = Harilik pliiats
-GrabBag.Hand = Käsi
-
-BranchSource.Capacitor = Kondensaator
-BranchSource.Inductor=Induktsioonpool
-BranchSource.AC = Vahelduvvoolu \nallikas
-
-ac.voltage.source.editor=Vahelduvvoolu allika redaktor
-ReadoutGraphic.ACVolts=Volti
-capacitance=Mahtuvus
-edit.capacitance=Muuda mahtuvust
-farads=Faradit
-add.current.chart=Voolutugevuse graafik
+#circuit-construction-kit-strings_et.properties created Wed Dec 28 20:45:17 CET 2011 using: circuit-construction-kit 3.20.00 (53075), translation-utility 2.13.00 (59150) Dets 8, 2011
+#Wed Dec 28 20:45:17 CET 2011
+CCK3ControlPanel.HideElectronsCheckBox=Peida V\u00F5rrandid
+CCK3ControlPanel.NonContactAmmeterCheckBox=<html>Kontaktivaba<br>Ampermeeter</html>
+CCK3ControlPanel.ChangeViewButton=Muuda vaadet 200x
+circuit-construction-kit-dc-virtual-lab.name=Virtuaalne vooluringi labor (DC)
+CircuitComponentInteractiveGraphic.RemoveMenuItem=Eemalda
+ComponentEditor.ResistorResistanceName=Takistus
+BranchSource.Resistor=Takisti
+CCK3ControlPanel.MediumRadioButton=Keskmine
+GrabBag.PencilLead=Harilik pliiats
+CCK3ControlPanel.Enable=N\u00E4ita >>
 add.voltage=Pinge graafik
-reset.dynamics=Taaskäivita dünaamika
-
-inductance=Juhtivus
+CCKHelp.ToolboxHelp=V\u00F5ta juhtmeid\nja komponente\nt\u00F6\u00F6riistakastist.
+ComponentEditor.BulbResistanceTitle=Lamp
 edit.inductance=Muuda juhtivust
+CCK3ControlPanel.JunctionEquations=Harupunktide v\u00F5rrandid
 henries=Henrit
-
-discharge.capacitor=Lae kondensaator tühjaks
-discharge.inductor=Lae induktsioonpool tühjaks
-
-time.sec=Aegs)
+CircuitComponentInteractiveGraphic.ShowValueMenuItem=N\u00E4ita v\u00E4\u00E4rtust
+GrabBagButton.DialogTitle=Vooluahela lisad
+edit.capacitance=Muuda mahtuvust
+CCK3ControlPanel.WireResistivitySliderMeasure=Takistus/pikkus
+VirtualAmmeter.HelpString2=et n\u00E4ha voolutugevust.
+VirtualAmmeter.HelpString1=Liiguta juhtme peale
+ComponentEditor.BatteryVoltageName=Pinge
+OptionsMenu.Title=Valikud
+CircuitComponentInteractiveGraphic.VoltageMenuItem=Muuda pinget
+CircuitComponentInteractiveGraphic.FlipMenuItem=P\u00F6\u00F6ra \u00FCmber
+discharge.inductor=Lae induktsioonpool t\u00FChjaks
+CircuitComponentInteractiveGraphic.RightConnectMenuItem=Kuva \u00FChendus paremal
+VirtualAmmeter.Amps=Amprit
+ConstantDensityPropagator.SpeedLimitReached2=% \!
+BranchSource.LightBulb=Lamp
+ConstantDensityPropagator.SpeedLimitReached1=Animatsiooni kiiruse limiit saavutatud\! Simulatsiooni kiirust v\u00E4hendatud
+BranchSource.Capacitor=Kondensaator
+circuit-construction-kit-ac.name=Virtuaalne vooluringi labor (AC+DC)
+CCK3ControlPanel.WireResistivitySlider=Juhtme takistus
+BranchSource.Inductor=Induktsioonpool
+change-frequency=Muuda sagedust
+GrabBag.DollarBill=Paberraha
+ComponentEditor.BulbResistanceName=Takistus
+CCK3Module.GrabAWire=V\u00F5ta t\u00F6\u00F6riistakastist juhtmeid
+ReadoutGraphic.Ohms=Oomi
+BranchSource.AC=Vahelduvvoolu \nallikas
+JunctionSplitter.SplitMenuItem=\u00DChenda lahti
+OptionsMenu.TitleMnemonic=o
+CCK3ControlPanel.FilePanelBorder=Fail
+GrabBagButton.ButtonTitle=Vooluahela lisad
+ComponentEditor.BatteryVoltageUnits=Volti
+ComponentEditor.ACFrequency=AC sagedus
+ReadoutGraphic.Volts=Volti
+ComponentEditor.ResistorResistanceUnits=Oomi
+CCK3ControlPanel.HideValuesCheckBox=Peida V\u00E4\u00E4rtused
+GrabBag.PaperClip=Kirjaklamber
+CCK3ControlPanel.LotsLabel=V\u00E4ga suur
+GrabBag.Penny=M\u00FCnt
+CCKHelp.ComponentHelp=Liigutamiseks lohista v\u00F5i\nparem hiirekl\u00F5ps et muuta v\u00F5i kustutada.
+discharge.capacitor=Lae kondensaator t\u00FChjaks
+add.current.chart=Voolutugevuse graafik
+ComponentEditor.BatteryVoltageTitle=Vooluallikas
+CCK3ControlPanel.ToolsPanelBorder=M\u00F5\u00F5teriistad
+CCKHelp.right-click-help=Valikute n\u00E4gemiseks kliki hiire paremklahvi
+CCK3ControlPanel.LoopEquations=Kontuuride v\u00F5rrandid
+capacitance=Mahtuvus
+OptionsMenu.ToolboxColorDialogTitle=T\u00F6\u00F6riistakasti v\u00E4rvus
+ComponentEditor.ResistorResistanceTitle=Takisti
+CCK3ControlPanel.AmmeterCheckBox=Ampermeeter
+ComponentEditor.Hz=Hz
+BranchSource.Wire=Juhe
+CCK3ControlPanel.GIFHelpButton=GIF abi
+CCK3ControlPanel.SaveButton=Salvesta
+BranchSource.Ammeter=Ampermeeter
+CCK3ControlPanel.OhmsLawEquations=Oomi seaduse v\u00F5rrandid
+CCK3ControlPanel.LIfelikeRadioButton=Piltlik
+time=Aeg
+ReadoutGraphic.Farads=Faradit
+CCK3ControlPanel.PhETToolTip=<html>Kl\u00F5psa et k\u00FClastada<br>PhET programmi veebilehte.</html>
+ComponentEditor.DoneButton=Tehtud
+CCK3ControlPanel.SchematicRadioButton=Skemaatiline
+OptionsMenu.BackgroundColorDialogTitle=Tausta v\u00E4rvus
+CCK3ControlPanel.AdvancedControlsDialog=Lisavalikud
+CircuitComponentInteractiveGraphic.ResistanceMenuItem=Muuda takistust
+CCK3ControlPanel.VoltmeterCheckBox=Voltmeeter
+CircuitComponentInteractiveGraphic.ReverseMenuItem=P\u00F6\u00F6ra \u00FCmber
+OptionsMenu.ToolboxcolorMenuItem=T\u00F6\u00F6riistakasti v\u00E4rvus
+CCK3ControlPanel.ErrorLoadingHelpDialog=Viga abifaili laadimisel
 stopwatch=Stopper
+GrabBag.Hand=K\u00E4si
+CCK3ControlPanel.LocalHelpButton=Kohalik abi
+CCK3ControlPanel.PhETURL=http\://phet.colorado.edu
+CCK3ControlPanel.ShowValuesCheckBox=N\u00E4ita V\u00E4\u00E4rtused
+CCK3ControlPanel.SmallRadioButton=V\u00E4ike
+CircuitComponentInteractiveGraphic.LeftConnectMenuItem=Kuva \u00FChendus vasakul
+ReadoutGraphic.ACVolts=Volti
+ac.voltage.source.editor=Vahelduvvoolu allika redaktor
+CCKHelp.right-click-help-mac=Valikute n\u00E4gemiseks kliki Ctrl
+reset.dynamics=Taask\u00E4ivita d\u00FCnaamika
+VoltmeterGraphic.UnknownVolts=???
+CCK3ControlPanel.ShowXMLButton=n\u00E4ita XML
+CCK3ControlPanel.CircuitEquationsFrame=Vooluringi v\u00F5rradid
+ComponentEditor.BatteryResistanceName=Sisetakistus
+CCK3ControlPanel.CloseButton=Sulge
+farads=Faradit
+CCK3ControlPanel.LoadButton=Laadi
+CircuitComponentInteractiveGraphic.InternalResistanceMenuItem=Muuda sisetakistust
+current-y-axis=Voolutugevus(Amprit
+circuit-construction-kit-dc.name=Virtuaalne vooluringi labor (DC)
+BranchSource.Battery=Vooluallikas
+CCK3ControlPanel.VisualPanelBorder=Vaade
+SeriesAmmeterGraphic.Amps=Amprit
+SeriesAmmeterGraphic.Ammeter=Ampermeeter
+OptionsMenu.BackgroundColorMenuItem=Tausta v\u00E4rvus
+CCK3ControlPanel.AdvancedPanelBorder=Lisavalikud
+CCK3ControlPanel.SizePanelBorder=Suurus
+ComponentEditor.BatteryResistanceUnits=Oomi
+GrabBagButton.Help=Vajuta nuppu objekti k\u00F5rval.
+voltage-y-axis=Pinge (V)
+ReadoutGraphic.Henries=Henrit
+CCK3ControlPanel.Disable=Peida <<
+BranchSource.Switch=L\u00FCliti
+CCK3ControlPanel.LargeRadioButton=Suur
+circuit-construction-kit-ac-virtual-lab.name=Virtuaalne vooluringi labor (AC+DC)
+CCK3ControlPanel.AlmostNoneLabel=Olematu
+ComponentEditor.BatteryResistanceTitle=Vooluallikas
+WarningMessages.PossibleError=T\u00E4helepanu\: M\u00F5ningad v\u00E4\u00E4rtused v\u00F5ivad selle vooluringi puhul ebat\u00E4psed olla
+CCK3ControlPanel.CCKHelpGifURL=http\://www.colorado.edu/physics/phet/projects/cck/v8/circuit-construction-kit-help.gif
+CCKHelp.JunctionHelp=Lohista \u00FChenduskohti v\u00F5i\nparem hiirekl\u00F5ps men\u00FC\u00FCsse.
+ComponentEditor.Frequency=Sagedus
+GrabBag.Eraser=Kustukumm
+inductance=Juhtivus
+InteractiveBranchGraphic.RemoveMenuItem=Eemalda
+ComponentEditor.MoreVoltsCheckBox=Rohkem Volte
+time.sec=Aeg(s)
+GrabBag.Dog=Koer
