--- a/trunk/simulations-java/simulations/faraday/data/faraday/localization/faraday-strings_et.properties
+++ b/trunk/simulations-java/simulations/faraday/data/faraday/localization/faraday-strings_et.properties
@@ -1,103 +1,47 @@
-# FaradayStrings.properties
-#===============================================================================
-
-# Application
-FaradayApplication.title            =Faraday Elekrtomagnetism
-FaradayApplication.description      =Demonstreerib Faraday seaduse kasutusvalgkondi.
-
-#-------------------------------------------------------------------------------
-# Menus
-#-------------------------------------------------------------------------------
-
-# Menubar
-Menubar.options                     =Valikud
-Menubar.options.mnemonic            =V
-Menubar.backgroundColor             =Tausta Värvus...
-Menubar.backgroundColor.mnemonic    =T
-Menubar.gridControls                =Välja Juhtimine...
-Menubar.gridControls.mnemonic       =J
-
-#-------------------------------------------------------------------------------
-# Modules
-#-------------------------------------------------------------------------------
-
-# Module titles
-BarMagnetModule.title               =Magnet Kang
-PickupCoilModule.title              =Induktsioon pool
-ElectromagnetModule.title           =Elektromagnet
-TransformerModule.title             =Transformaator
-GeneratorModule.title               =Generaator
-
-# Module Wiggle Mes
-BarMagnetModule.wiggleMe            =Liiguta kompassi või magnetit
-
-# Common stuff
-Reset.button                        =Taaskäivita
-
-#-------------------------------------------------------------------------------
-# Dialogs
-#-------------------------------------------------------------------------------
-
-# Background Color dialog
-BackgroundColorDialog.title         =Tausta Värvus
-
-# Grid Controls dialog
-GridControlsDialog.title            =Välja Juhtimine
-GridControlsDialog.warning          =<html>ETTEVAATUST! Nende parameetrite muutmine võib<br>tugevasti mõjutada jõudlust.<html>
-GridControlsDialog.spacing          =Nõelte asetus:
-GridControlsDialog.needleSize       =Nõelte suurus:
-GridControlsDialog.ok               =OK
-GridControlsDialog.cancel           =Tühista
-
-#-------------------------------------------------------------------------------
-# Control Panels
-#-------------------------------------------------------------------------------
-
-# Bar Magnet panel
-BarMagnetPanel.title                =Magnet Kang
-BarMagnetPanel.strength             =Tugevus:
-BarMagnetPanel.flipPolarity         =Vaheta polaarsus
-BarMagnetPanel.showGrid             =Joonista väli
-BarMagnetPanel.seeInside            =Väli magneti sees
-BarMagnetPanel.showFieldMeter       =Näita välja mõõdikut
-BarMagnetPanel.showCompass          =Näita kompassi
-
-# Pickup Coil panel
-PickupCoilPanel.title               =Induktsioon pool
-PickupCoilPanel.area                =Keeru pindala:
-PickupCoilPanel.indicator           =Indikaator
-PickupCoilPanel.voltmeter           =Voltmeeter
-PickupCoilPanel.lightbulb           =Lamp
-
-# Electromagnet panel
-ElectromagnetPanel.title            =Elektromagnet
-ElectromagnetPanel.showElectrons    =Näita elekrtonid
-ElectromagnetPanel.numberOfLoops    =Keerdude arv:
-ElectromagnetPanel.currentSource    =Voolu allikas
-ElectromagnetPanel.ac               =AC
-ElectromagnetPanel.dc               =DC
-
-# Turbine panel
-TurbinePanel.title                  =Turbiin
-
-#-------------------------------------------------------------------------------
-# Graphical Objects
-#-------------------------------------------------------------------------------
-
-# Magnet Field Meter
-FieldMeter.title                       =Magnetväli (B)
-
-# Battery graphic
-BatteryGraphic.voltage                 =v
-
-# AC Power Supply graphic
-ACPowerSupplyGraphic.title             =Vahelduvvoolu allikas
-
-# Voltmeter graphic
-VoltmeterGraphic.title                 =pinge
-
-# Turbine graphic
-TurbineGraphic.rpm                     =RPM
-
-#===============================================================================
-# end of file
+#faraday-strings_et.properties created Wed Dec 28 20:18:37 CET 2011 using: faraday 2.07.00 (57375), translation-utility 2.13.00 (59150) Dets 8, 2011
+#Wed Dec 28 20:18:37 CET 2011
+BarMagnetPanel.showCompass=N\u00E4ita kompassi
+magnets-and-electromagnets.name=Magnetid ja elektromagnetid
+Menubar.backgroundColor.mnemonic=T
+Menubar.gridControls.mnemonic=J
+GeneratorModule.title=Generaator
+GridControlsDialog.warning=<html>ETTEVAATUST\! Nende parameetrite muutmine v\u00F5ib<br>tugevasti m\u00F5jutada programmi j\u00F5udlust.</html>
+BarMagnetPanel.showGrid=Joonista v\u00E4li
+ElectromagnetPanel.title=Elektromagnet
+ElectromagnetPanel.currentSource=Voolu allikas
+TransformerModule.title=Transformaator
+BarMagnetPanel.flipPolarity=Vaheta polaarsus
+generator.name=Generaator
+magnet-and-compass.name=Magnet ja kompass
+BarMagnetModule.wiggleMe=Liiguta kompassi v\u00F5i magnetit
+VoltmeterGraphic.title=pinge
+BarMagnetPanel.strength=Tugevus\:
+FieldMeter.title=Magnetv\u00E4li (B)
+ElectromagnetModule.title=Elektromagnet
+GridControlsDialog.ok=OK
+PickupCoilPanel.area=Keeru pindala\:
+PickupCoilPanel.indicator=Indikaator
+BarMagnetPanel.seeInside=V\u00E4li magneti sees
+BarMagnetModule.title=Pulkmagnet
+GridControlsDialog.cancel=T\u00FChista
+PickupCoilPanel.title=Induktsioonpool
+BarMagnetPanel.showFieldMeter=N\u00E4ita v\u00E4lja m\u00F5\u00F5dikut
+ACPowerSupplyGraphic.title=Vahelduvvoolu allikas
+PickupCoilModule.title=Induktsioonpool
+error.barMagnetInitialization=<html>Pulkmagneti modelleerimisel tekkis viga\:<br>{0}<br><br>V\u00E4ljumine</html>
+ElectromagnetPanel.numberOfLoops=Keerdude arv\:
+BarMagnetPanel.title=Pulkmagnet
+ControlPanel.width=225
+faraday.name=Faraday elektromagnetlabor
+ElectromagnetPanel.showElectrons=N\u00E4ita elekrtonid
+GridControlsDialog.needleSize=N\u00F5elte suurus\:
+BackgroundColorDialog.title=Tausta v\u00E4rvus
+TurbineGraphic.rpm=RPM
+BatteryGraphic.voltage=v
+Menubar.gridControls=V\u00E4lja juhtimine...
+Menubar.backgroundColor=Tausta v\u00E4rvus...
+GridControlsDialog.title=V\u00E4lja Juhtimine
+ElectromagnetPanel.ac=AC
+ElectromagnetPanel.dc=DC
+BarMagnetPanel.showEarth=N\u00E4ita planeeti Maa
+GridControlsDialog.spacing=N\u00F5elte asetus\:
