--- a/trunk/simulations-java/simulations/force-law-lab/data/force-law-lab/localization/force-law-lab-strings_et.properties
+++ b/trunk/simulations-java/simulations/force-law-lab/data/force-law-lab/localization/force-law-lab-strings_et.properties
@@ -1,5 +1,5 @@
-#force-law-lab-strings_et.properties created Tue Nov 22 20:20:05 CET 2011 using: force-law-lab 1.02.00 (58700), translation-utility 2.12.00 (57171) Okt 3, 2011
-#Tue Nov 22 20:20:05 CET 2011
+#force-law-lab-strings_et.properties created Wed Dec 28 20:47:02 CET 2011 using: force-law-lab 1.02.00 (58700), translation-utility 2.13.00 (59150) Dets 8, 2011
+#Wed Dec 28 20:47:02 CET 2011
 custom=Ise defineeritud
 readout.pattern-bodyname={0} mass
 units.kg=kg
@@ -24,4 +24,4 @@ translation.credits=S.K.
 force-description-pattern-target_source_value={0} m\u00F5juv j\u00F5ud {1}  poolt \= {2} N
 units.kilometers=kilomeetrid
 units.m=m
-gravity-force-lab.name=Gravitatsioonijlabor
+gravity-force-lab.name=Gravitatsioonilabor
