--- a/simulations-java/simulations/ideal-gas/data/ideal-gas/localization/ideal-gas-strings_et.properties
+++ b/simulations-java/simulations/ideal-gas/data/ideal-gas/localization/ideal-gas-strings_et.properties
@@ -1,107 +1,81 @@
-#
-# Base localization for Ideal Gas simulation strings
-#
-
-# Application
-IdealGasApplication.title                   =Gaaside omadused
-IdealGasApplication.description             =Gaaside omadused
-BuoyancyApplication.title                   =Õhupallid ja ujuvus
-BuoyancyApplication.description             =Õhupallid ja ujuvus
-DiffusionApplication.title                  =Molekulaarkiirguse katsed
-DiffusionApplication.description            =Molekulaarkiirguse katsed
-UnimolecularApplication.title               =Pöörduvad reaktsioonid
-UnimolecularApplication.description         =Pöörduvad reaktsioonid
-
-# IdealGasControlPanel
-IdealGasControlPanel.Constant_Parameter                 =Konstantne parameeter
-IdealGasControlPanel.Gas_In_Chamber                     =Gaas kambris
-IdealGasControlPanel.Particles_In_Chamber               =Molekulid kambris
-IdealGasControlPanel.Show_CM_lines                      =Massitsentri markerid
-IdealGasControlPanel.Add_remove_heat_from_floor_only    =<html>Lisa/Eemalda soojus<br>Ainult põhjast</html>
-IdealGasControlPanel.Heat_Control                       =Soojuse juhtimine
-IdealGasControlPanel.Measurement_Tools                  =<html><center>Mõõteseadmed</center></html>
-IdealGasControlPanel.Measurement_Tools_on                =Mõõteseadmed >>
-IdealGasControlPanel.Measurement_Tools_off               =<< Peida mõõteseadmed
-IdealGasControlPanel.Reset                              =Taaskäivita
-IdealGasControlPanel.MiscPanelTitle                     =Varia
-IdealGasControlPanel.Pump_Gas                           =Osakesed pumbas
-IdealGasControlPanel.Pump_Particles                     =Osakesed pumbas
-IdealGasControlPanel.AveTimePanelTitle                  =Averaging Time
-IdealGasControlPanel.MoreOptions                        =Lisa valikud>>
-IdealGasControlPanel.FewerOptions                       =<< Peida valikud
-IdealGasControlPanel.Tools_and_options                  =Tööriistad ja valikud
-
-# MeasurementControlPanel
-MeasurementControlPanel.Number_of_particles         =<html>Aatomite arv</html>
-# MeasurementControlPanel.No_particle_interactions  =<html>Molekulid<br>põrkuvad</html>
-MeasurementControlPanel.Molecules-interact          =Molekulid põrkuvad
-MeasurementControlPanel.Display_ruler               =Joonlaud
-MeasurementControlPanel.Measure_pressure_in_layer   =<html>Tasapinna tööriist</html>
-MeasurementControlPanel.Display_energy_histograms   =<html>Energia diagrammid</html>
-MeasurementControlPanel.Show_species_information    =Osakeste info
-MeasurementControlPanel.Stopwatch                   =Stopper
-
-# RigidHollowSphereControlPanel
-RigidHollowSphereControlPanel.controlsTitle         =Gas in Sphere
-
-# HeliumBalloonControlPanel
-HeliumBalloonControlPanel.controlsTitle             =Helium in Balloon
-
-# EnergyHistorgramDialog
-EnergyHistorgramDialog.Title                   =Osakeste statistika
-EnergyHistorgramDialog.Fewer_Details           =<< Vähem detaile
-EnergyHistorgramDialog.More_Details            =Rohkem detaile >>
-EnergyHistorgramDialog.Energy_Distribution     =Kineetiline energia
-EnergyHistorgramDialog.Speed_Distribution      =Kiirus
-EnergyHistorgramDialog.Heavy_Speed_label       =Kiirus: Rasked molekulid
-EnergyHistorgramDialog.Light_Speed_label       =Kiirus: Kerged molekulid
-EnergyHistorgramDialog.OutOfRangeIndicatorLegend  =Tähistab väärtust väljaspool piire
-
-# IdealGasMonitorPanel
-IdealGasMonitorPanel.Title                   =Gaasi omadused
-IdealGasMonitorPanel.Heavy_species           =Rasked osakesed
-IdealGasMonitorPanel.Light_species           =Kerged osakesed
-
-# GasMonitorPanel
-GasMonitorPanel.Title                   =Gaasi omadused
-GasMonitorPanel.Temperature             =Temperatuur
-GasMonitorPanel.Pressure                =Rõhk
-
-# GasSpeciesMonitorPanel
-GasSpeciesMonitorPanel.Title                   =Gaasi omadused
-GasSpeciesMonitorPanel.Number_of_Gas_Molecules =Gaasi molekulide arv
-GasSpeciesMonitorPanel.Average_speed           =Keskm. kiirus
-
-# Module Titles
-ModuleTitle.HeliumBalloon       =Helium Balloon
-ModuleTitle.HotAirBalloon       =Hot Air Balloon
-ModuleTitle.IdealGas            =Gas Properties
-ModuleTitle.Measurements        =Measurements
-ModuleTitle.RigidHollowSphere   =Rigid Hollow Sphere
-
-# Misc
-Common.1X                       =1X
-Common.10X                      =10X
-Common.0                        =0
-Common.Add                      =Lisa
-Common.Volume                   =Ruumala
-Common.Pressure                 =Rõhk
-Common.Temperature              =Temperatuur
-Common.None                     =Puudub
-Common.On                       =Sees
-Common.Max                      =Maks
-Common.Lots                     =Palju
-Common.Remove                   =Eemalda
-Common.Gravity                  =Gravitatsioon
-Common.Heavy_Species            =Rasked osakesed
-Common.Light_Species            =Kerged osakesed
-WiggleMe.Pump_the               =Liiguta pumba
-WiggleMe.handle!                =käepidet!
-PressTempTool.units             =ühikud
-
-AdvancedModule.Particle_Type_A              =A
-AdvancedModule.Particle_Type_B              =B
-AdvancedModule.Count                        =Count
-AdvancedControlPanel.Particle_Temperature   =<html>uute osakeste<br>temperatuur (K):</html>
-MovableWallsModule.StopwatchTimeUnits       =sek
-IdealGasModule.StopwatchTimeUnits           =sek
+#ideal-gas-strings_et.properties created Wed Dec 28 20:35:21 CET 2011 using: ideal-gas 3.14.00 (51133), translation-utility 2.13.00 (59150) Dets 8, 2011
+#Wed Dec 28 20:35:21 CET 2011
+Common.None=Puudub
+HeliumBalloonControlPanel.controlsTitle=Heelium \u00F5hupallis
+PressureSlideGraphic.height=k\u00F5rgus
+balloons-and-buoyancy.name=\u00D5hupallid & \u00FClesl\u00F5kkej\u00F5ud
+EnergyHistorgramDialog.Fewer_Details=<< V\u00E4hem detaile
+Common.Temperature=Temperatuur
+Common.Gravity=Gravitatsioon
+IdealGasMonitorPanel.Heavy_species=Rasked osakesed
+ModuleTitle.IdealGas=Gassi omadused
+help.stove=Soojust saab ahju abil kas lisada v\u00F5i eemaldada
+pressure-gauge.units=Atm
+EnergyHistorgramDialog.Light_Speed_label=Kiirus\: Kerged molekulid
+pressure-gauge.title=R\u00F5hk
+IdealGasModule.StopwatchTimeUnits=sek
+IdealGasControlPanel.Measurement_Tools_on=M\u00F5\u00F5teseadmed >>
+WiggleMe.handle\!=k\u00E4epidet\!
+MovableWallsModule.StopwatchTimeUnits=sek
+EnergyHistorgramDialog.More_Details=Rohkem detaile >>
+MeasurementControlPanel.Molecules-interact=Molekulid p\u00F5rkuvad
+IdealGasControlPanel.Pump_Gas=Osakesed pumbas
+IdealGasControlPanel.FewerOptions=<< Peida valikud
+IdealGasControlPanel.Pump_Particles=Osakesed pumbas
+IdealGasControlPanel.SetButton=Sea
+WiggleMe.Pump_the=Pumpa
+MeasurementControlPanel.Show_species_information=Osakeste info
+IdealGasControlPanel.Measurement_Tools_off=<< Peida m\u00F5\u00F5teseadmed
+IdealGasControlPanel.AveTimePanelTitle=Aja keskmistamine
+MeasurementControlPanel.Measure_pressure_in_layer=<html>Tasapinna t\u00F6\u00F6riist</html>
+IdealGasMonitorPanel.Light_species=Kerged osakesed
+chart.label.msec=m/sek
+RigidHollowSphereControlPanel.controlsTitle=Gaas sf\u00E4\u00E4ris
+help.wall=Seina saab paremale ja vasakule liigutada
+IdealGasControlPanel.Show_CM_lines=Massitsentri markerid
+IdealGasControlPanel.Tools_and_options=T\u00F6\u00F6riistad ja valikud
+IdealGasControlPanel.Gas_In_Chamber=Gaas kambris
+AdvancedControlPanel.Particle_Temperature=<html>uute osakeste<br>temperatuur (K)\:</html>
+ModuleTitle.HeliumBalloon=Heeliumiga t\u00E4dietud \u00F5hupall
+Common.Heavy_Species=Rasked osakesed
+ModuleTitle.RigidHollowSphere=J\u00E4ik \u00F5\u00F5nes sf\u00E4\u00E4r
+IdealGasControlPanel.Heat_Control=Soojuse juhtimine
+IdealGasControlPanel.Particles_In_Chamber=Molekulid kambris
+AdvancedModule.Particle_Type_B=B
+AdvancedModule.Particle_Type_A=A
+ModuleTitle.HotAirBalloon=Kuuma \u00F5hu pall
+diffusion.name=Hajumine
+Common.Volume=Ruumala
+EnergyHistorgramDialog.Speed_Distribution=Kiirus
+Common.Remove=Eemalda
+temperature.units.abbreviation=K
+MeasurementControlPanel.Display_energy_histograms=<html>Energia diagrammid</html>
+stopwatch.units=psek
+GasSpeciesMonitorPanel.Number_of_Gas_Molecules=Gaasi molekulide arv
+MeasurementControlPanel.Number_of_particles=<html>Aatomite arv</html>
+IdealGasControlPanel.MoreOptions=Lisa valikud>>
+EnergyHistorgramDialog.Energy_Distribution=Kineetiline energia
+GasSpeciesMonitorPanel.Average_speed=Keskm. kiirus
+stopwatch.stop=Stopp
+Common.Pressure=R\u00F5hk
+stopwatch.start=Start
+IdealGasControlPanel.Constant_Parameter=Konstantne parameeter
+IdealGasControlPanel.Measurement_Tools=<html><center>M\u00F5\u00F5teseadmed</center></html>
+Common.0=0
+Common.Light_Species=Kerged osakesed
+GasSpeciesMonitorPanel.Title=Gaasi omadused
+MeasurementControlPanel.Display_ruler=Joonlaud
+IdealGasControlPanel.Reset=Taask\u00E4ivita
+EnergyHistorgramDialog.OutOfRangeIndicatorLegend=T\u00E4histab v\u00E4\u00E4rtust v\u00E4ljaspool piire
+Common.Add=Lisa
+Common.Max=Maks
+gas-properties.name=Gaasi omadused
+AdvancedModule.Count=Count
+chart.label.number.of.particles=Osakeste arv
+Common.Lots=Palju
+EnergyHistorgramDialog.Title=Osakeste statistika
+help.door=Ust saab paremale ja vasakule liigutada
+reversible-reactions.name=P\u00F6\u00F6ratavad reaktsioonid
+EnergyHistorgramDialog.Heavy_Speed_label=Kiirus\: Rasked molekulid
+MeasurementControlPanel.Stopwatch=Stopper
+stopwatch.reset=Algseaded
