--- a/trunk/simulations-java/simulations/moving-man/data/moving-man/localization/moving-man-strings_et.properties
+++ b/trunk/simulations-java/simulations/moving-man/data/moving-man/localization/moving-man-strings_et.properties
@@ -1,106 +1,31 @@
-#===============================================================================
-#
-#  US English (en) localized strings for "moving-man" simulation.
-#
-#===============================================================================
-
-#===============================================================================
-# Mandatory properties
-#===============================================================================
-
-moving-man.name=The Moving Man
-moving-man.description=Õpi tundma asukoha, kiiruse ja kiirenduse graafikuid. \
-  Liiguta meest hiire abil edasi-tagasi ja kuva tema liikumise graafikud. \
-  Sisesta positsiooni, kiiruse ja kiirenduse parameetrid ning lase simulatsioonil meest liigutada.
-
-mm-motion.name=Liikuv mees(liikumine)
-mm-motion.description=Simulatsioon Liikuv mees (liikumine)
-
-moving-man-position.name=Liikuv mees
-moving-man-position.description=Õpi tundma asukoha, kiiruse ja kiirenduse graafikuid. \
-  Liiguta meest hiire abil edasi-tagasi ja kuva tema liikumise graafikud. \
-  Sisesta positsiooni, kiiruse ja kiirenduse parameetrid ning lase simulatsioonil meest liigutada.
-
-#
-# Base localization for Moving Man simulation strings
-#
-
-# PlotSet
-variables.position=Asukoht
-variables.velocity=Kiirus
-variables.acceleration=Kiirendus
-variables.position.abbreviation=x
-variables.velocity.abbreviation=v
-variables.acceleration.abbreviation=a
-units.meters=meetrit
+#moving-man-strings_et.properties created Wed Dec 28 20:50:43 CET 2011 using: moving-man 2.03.00 (56597), translation-utility 2.13.00 (59150) Dets 8, 2011
+#Wed Dec 28 20:50:43 CET 2011
 units.seconds=sekundit
-units.meters.abbreviation=m
-units.velocity.abbreviation=m/s
-units.acceleration.abbreviation=<html>m/s<sup><font size=-1>2</font></sup></html>
-
-options.number-smoothing.points.title=Muuda silumispunktide arvu.
-options.number-smoothing-points=Mitu silumispunkti?
-menu.view=Vaade
-
-controls.reverse-x-axis=Pööra X-telg
-controls.reset=Tühista
-controls.record=Salvesta
-controls.playback=Mängi tagasi
-controls.close-plot=Sulge graafik
-controls.error-loading-help=Viga Abifaili laadimisel
-controls.help=Abi
-controls.special-features=Eriparameetrid
-controls.special-features.mnemonic=s
+variables.acceleration.abbreviation=a
+expressions.title=V\u00F5rrandi kalkulaator
+module.introduction.title=Sissejuhatus
+variables.velocity.abbreviation=v
 controls.vectors=Vektorid
-
-# PlaybackPanel
-time.pause=Paus
-time.playback=Mängi tagasi
-time.rewind=Keri tagasi
-time.slow-playback=Aeglane mängimine
-time.clear=Puhasta
-
-# MMPlot
-plot.pause=Paus
-plot.go=Mine!
-plot.clear=Puhasta
-plot.confirm-clear=See puhastab graafikud.  Oled sa selles kindel?
-plot.confirm-reset=Kinnita tühistamine
-plot.close-graph=Sulge graafik
-plot.show=Kuva
-plot.zoom-in=Suurenda
-plot.zoom-out=Vähenda
-plot.time=Aeg
-
-# RecordMode
-RecordMode.ModeName=Salvesta
-
-#Help
-help.drag-the-man=Liiguta meest
-help.drag-the-slider=Nihuta liugurit
-help.type-a-value=Sisesta väärtus
-help.drag-the-cursor=Liiguta kursorit
-
-# JEPFrame
-expressions.title=Võrrandi kalkulaator
-expressions.mode=Võrrandi reziim
-expressions.description=Sisesta liikumise aegsõltuvus (aeg tähista 't').
-expressions.example=9*sin(t*t/pi)
-expressions.range=x(t)
-expressions.control.reset=Tühista
-
-options.walls=Seinad
-options.free-range=Vaba ulatus
-options.model-options=Mudeli parameetrid
-options.real-time=Reaalajas
+controls.reverse-x-axis=P\u00F6\u00F6ra X-telg \u00FCmber
+label.zero-meters=0 meetrit
+units.velocity.abbreviation=m/s
+units.meters.abbreviation=m
+controls.special-features=Erivahendid
+module.charts.title=Tabelid
+expressions.examples=<html>Siin on m\u00F5ned n\u00E4ited sobilikest v\u00F5rranditest\:<br>x \= 3 * t + 2<br>x \= 2*sin(t)<br>x \= pow(t,2)<br><br>Pane t\u00E4hele, et korrutusm\u00E4rk tuleb \u00E4ra m\u00E4rkida<br>otseselt nagu 3 * t mitte nagu 3t.</html>
 options.sound=Heli
-options.model-controls=Mudeli parameetrid
-
-options.model-controls.explanation=<html>Vali punktide arv<br>iga parameetri<br>\
-                                              silumisaknasse.<br>\
-                                              'konstantsuse-kontrolli-aken' kontrollib viimaseid silumata<br>\
-                                              andmepunkte positsiooni parameetril, ja kui need on samad<br>\
-                                              määrab kiiruse ja kiirenduse silumisepunktid nulliks (eel-silumine)<br>\
-                                              <html>
-options.constant-check-window=konstantsuse-kontrolli-aken
-options.use-constant-window=Kasuta konstantset akent
+units.acceleration.abbreviation=<html>m/s<sup><font size\=-1>2</font></sup></html>
+variables.velocity=Kiirus
+pattern.time.label={0} {1}
+units.seconds.abbreviation=sek
+units.meters=meetrit
+variables.position=Asukoht
+variables.acceleration=Kiirendus
+vectors.velocity-vector=Kiirusvektor
+expressions.range=x(t)
+expressions.description=Sisesta liikumise aegs\u00F5ltuvus (aeg t\u00E4hista 't').
+vectors.acceleration-vector=Kiirendusvektor
+expressions.error=Viga
+expressions.help=Abi
+variables.position.abbreviation=x
+moving-man.name=Liikuv mees
