pt: Handle rotation based on movement

--- a/simulations-java/simulations/plate-tectonics/changes.txt
+++ b/simulations-java/simulations/plate-tectonics/changes.txt
@@ -1,3 +1,4 @@
+Handle rotation based on movement
 Changed handle to stick-and-ball style
 Reduced ruler size in toolbox for more visibility
 Added manual mode time readout
